--- a/maven-archetypes/pom.xml
+++ b/maven-archetypes/pom.xml
@@ -19,7 +19,7 @@
     <parent>
         <groupId>org.opoo.press</groupId>
         <artifactId>opoopress</artifactId>
-        <version>2.0-beta-1</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <groupId>org.opoo.press.maven.archetypes</groupId>
     <artifactId>opoopress-maven-archetypes</artifactId>
