--- a/maven-archetypes/theme/pom.xml
+++ b/maven-archetypes/theme/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.opoo.press.maven.archetypes</groupId>
         <artifactId>opoopress-maven-archetypes</artifactId>
-        <version>2.0-beta-1</version>
+        <version>2.0-SNAPSHOT</version>
     </parent>
     <groupId>org.opoo.press.maven.archetypes</groupId>
     <artifactId>opoopress-archetype-theme</artifactId>
